script added for poening ASCII files to DataFrame and a function for baseline parmeter determination

--- a/FTIR-ATR-data-processing.ipynb
+++ b/FTIR-ATR-data-processing.ipynb
@@ -1,19 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "FTIR-ATR data processing for quantification of biodiesel in diese blends"
+    "# FTIR-ATR data processing for quantification of biodiesel in diese blends"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -46,6 +42,15 @@
     "        df = pd.DataFrame(new_lines, columns=['Wave_number', 'Absorbance'])\n",
     "    return df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
