notebook edited to externalise the functions

--- a/FTIR-ATR-data-processing.ipynb
+++ b/FTIR-ATR-data-processing.ipynb
@@ -9,15 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import codecs\n",
+    "import FTIR_functions\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sb"
    ]
@@ -29,19 +27,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "def open_ascii(path):\n",
-    "    with codecs.open(path, encoding='utf-8-sig') as f:\n",
-    "        lines = f.readlines()[56:-2]\n",
-    "        new_lines = []\n",
-    "        for line in lines:\n",
-    "            splited_line = line.split('\\t')\n",
-    "            splited_line[0] = int(float(splited_line[0]))\n",
-    "            splited_line[1] = float(splited_line[1])\n",
-    "            new_lines.append(splited_line)\n",
-    "        df = pd.DataFrame(new_lines, columns=['Wave_number', 'Absorbance'])\n",
-    "    return df"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
