minor changes to the notebook and FTIRfunctions.py

--- a/FTIR-ATR-data-processing.ipynb
+++ b/FTIR-ATR-data-processing.ipynb
@@ -9,25 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import FTIR_functions\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import FTIRfunctions"
+   ]
   },
   {
    "cell_type": "code",
@@ -36,7 +25,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "df = "
+   ]
   }
  ],
  "metadata": {
