ploting was added to a function

--- a/FTIR-ATR-data-processing.ipynb
+++ b/FTIR-ATR-data-processing.ipynb
@@ -10,21 +10,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import FTIRfunctions as ff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = ff.openFTIR('Test_data/NB4 1 1.asc')"
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sb\n",
+    "import FTIRfunctions as ff\n"
    ]
   },
   {
@@ -33,23 +24,144 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "must be str, not int",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-6cfafd4b486b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0malcohols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;34m'NB4'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mconcentrations\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mdf2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mff\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprocesing_biodiesel_FTIR\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malcohols\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconcentrations\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdir_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Desktop\\GitHub\\FTIR-ATR-Biodiesel-quantification-in-diesel-blends\\FTIRfunctions.py\u001b[0m in \u001b[0;36mprocesing_biodiesel_FTIR\u001b[1;34m(alcohols, concentrations, dir_path)\u001b[0m\n\u001b[0;32m     38\u001b[0m             \u001b[0mthree_bd_abs_wn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 40\u001b[1;33m                 \u001b[0mfile\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0malcohol\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'-'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mconcentration\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'-'\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m'.asc'\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     41\u001b[0m                 \u001b[0mpath\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdir_path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     42\u001b[0m                 \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mopenFTIR\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: must be str, not int"
-     ]
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYsAAAEWCAYAAACXGLsWAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAHcVJREFUeJzt3X2UXXV97/H3h0knQYpBwmARGBMh\n2Bu8dmoPUK6gIBcM7TKBKw9JWwt2bNBr6tNi2dhrAdPlukWreK+gNDpQTLkGpOIdKl2xGkC8xZAJ\nDkKA1CFFMvI0GAyEh4SE7/1j/wYOx3POPjOZPeecmc9rrVlnn71/e5/v5oT5zH76/RQRmJmZ1bNP\nswswM7PW57AwM7NcDgszM8vlsDAzs1wOCzMzy+WwMDOzXA4LMzPL5bAwGydJD0l6XNJ+ZfM+IOnW\nNB2SnpW0Q9KTkr4p6YAq2zlQ0oikH01i+WZj4rAw2zszgI/WWf47EfGbwJuA1wGXVGlzKXD/xJdm\nNnEcFmZ75/PAhdWOGMpFxNNAP7CgfL6k44G3AFcXVqHZBHBYmO2dAeBW4MJ6jSS9DjgD+HHZvA7g\nCmA54H53rKU5LMz23kXAX0jqqrLsLkm/Ap4EuoG/L1v2EWB9RGychBrN9orDwmwvRcS9wD8DK6os\nfltEHADMAr4K3C5plqQ3kIXF/5i8Ss3Gb0azCzCbIi4G7gK+UG1hRLwo6evAl8iuURwGHALcJwlg\nX2BfSY8Bh0bEnkmp2qxBDguzCRARQ5KuIztauKdyebo+8X7geWBLajO3rMm5wB8Bix0U1oocFmYT\nZyXwvop5d0sK4CVgM3BmRGxLyx4bbSRpO/BiRDyGWQuSBz8yM7M8vsBtZma5HBZmZpbLYWFmZrkc\nFmZmlmvK3A110EEHxdy5c5tdhplZW9m4ceOTEVGt94FXmTJhMXfuXAYGBppdhplZW5H080ba+TSU\nmZnlcliYmVkuh4WZmeVyWJiZWS6HhZmZ5XJYmJlZLoeFmZnlcliYmVkuh4WZmeVyWJiZWS6HhZmZ\n5XJYmJlZLoeFmZnlcliYmVkuh4WZmeVyWJiZWS6HhZmZ5XJYmJlZrkLDQtJCSZslDUlaUWX5TEnX\npeXrJc1N8/9Y0mDZz0uSeoqs1czMaissLCR1AFcApwMLgKWSFlQ06wWeiogjgcuASwEi4tqI6ImI\nHuB9wEMRMVhUrWZmVl+RRxbHAkMRsSUidgFrgMUVbRYD16TpG4BTJKmizVLgmwXWaWZmOYoMi0OB\nrWXvh9O8qm0iYjewHZhT0eZcaoSFpGWSBiQNjIyMTEjRZmb264oMi8ojBIAYSxtJxwHPRcS91T4g\nIlZFRCkiSl1dXeOv1MzM6ioyLIaBw8veHwY8UquNpBnAbGBb2fIl+BSUmVnTFRkWG4D5kuZJ6iT7\nxd9f0aYfOC9NnwWsi4gAkLQPcDbZtQ4zM2uiGUVtOCJ2S1oOrAU6gKsiYpOklcBARPQDfcBqSUNk\nRxRLyjbxDmA4IrYUVaOZmTVG6Q/5tlcqlWJgYKDZZZiZtRVJGyOilNfOT3CbmVkuh4WZmeVyWJiZ\nWS6HhZmZ5XJYmJlZLoeFmZnlcliYmbWjkRFYtAi6u7PXgvvHc1iYmbWj3l64/XbYuTN77e0t9OMc\nFmZm7WhwEDo7oaMjex0sdsgfh4WZWTvq6YFdu2DPnuy1p9jBRB0WZmbtqK8PTjwRZs7MXvv6Cv24\nwjoSNDOzAnV1QX9lR97F8ZGFmZnlcliYmVkuh4WZmeVyWJiZWS6HhZmZ5XJYmJlZrkLDQtJCSZsl\nDUlaUWX5TEnXpeXrJc0tW/ZWSXdI2iTpHkmziqzVzMxqKywsJHUAVwCnAwuApZIWVDTrBZ6KiCOB\ny4BL07ozgH8EPhgRRwMnAS8WVauZmdVX5JHFscBQRGyJiF3AGmBxRZvFwDVp+gbgFEkCTgN+GhF3\nA0TELyNiT4G1mplZHUWGxaHA1rL3w2le1TYRsRvYDswBjgJC0lpJd0n6ZIF1mplZjiK7+1CVedFg\nmxnACcAxwHPADyRtjIgfvGplaRmwDKC7u3uvCzYzs+qKPLIYBg4ve38Y8EitNuk6xWxgW5p/W0Q8\nGRHPATcDb6v8gIhYFRGliCh1dXUVsAtmZgbFhsUGYL6keZI6gSVAZa9X/cB5afosYF1EBLAWeKuk\n16QQeSdwX4G1mtlUNsmjyk1FhYVFugaxnOwX//3A9RGxSdJKSYtSsz5gjqQh4BPAirTuU8AXyQJn\nELgrIr5bVK1mNsVN8qhyU5GyP+TbX6lUioGBgWaXYWatqLs7C4qOjmywoJkz4eGHm11VS0jXg0t5\n7fwEt5lNfZM8qtxU5LAws6lvkkeVm4o8Up6ZTX2TPKrcVOQjCzMzy+WwMDOzXA4LMzPL5bAwM7Nc\nDgszM8vlsDAzs1wOCzMzy+WwMDOzXA4LMzPL5bAwM7NcDgszM8vlsDAzs1wOCzMzy+WwMDOzXA4L\nMzPL5bAwM7NchYaFpIWSNksakrSiyvKZkq5Ly9dLmpvmz5X0vKTB9HNlkXWamVl9hY2UJ6kDuAI4\nFRgGNkjqj4j7ypr1Ak9FxJGSlgCXAuemZQ9GhAfKNTNrAUUeWRwLDEXElojYBawBFle0WQxck6Zv\nAE6RpAJrMjOzcSgyLA4Ftpa9H07zqraJiN3AdmBOWjZP0k8k3SbpxALrNDOzHIWdhgKqHSFEg20e\nBboj4peSfg/4jqSjI+LpV60sLQOWAXR3d09AyWZmVk2RRxbDwOFl7w8DHqnVRtIMYDawLSJ2RsQv\nASJiI/AgcFTlB0TEqogoRUSpq6urgF0wMzMoNiw2APMlzZPUCSwB+iva9APnpemzgHUREZK60gVy\nJL0JmA9sKbBWMzOro6HTUJLeCMyPiO9L2heYERHP1FsnInZLWg6sBTqAqyJik6SVwEBE9AN9wGpJ\nQ8A2skABeAewUtJuYA/wwYjYNp4dNDOzvaeIyssIFQ2kPye7LnBgRBwhaT5wZUScMhkFNqpUKsXA\nwECzyzAzayuSNkZEKa9dI6ehPgy8HXgaICJ+Bhy8d+WZmVk7aSQsdqbnJICXL0TXPxwxs/Y1MgKL\nFkF3d/Y6MtLsiqwFNBIWt0n6K2BfSacC3wJuKrYsM2ua3l64/XbYuTN77e1tdkXWAhoJixXACHAP\ncAFwM/DpIosysyYaHITOTujoyF4HB5tdkbWARu6G2pfsTqavwct9Pu0LPFdkYWbWJD092RFFZyfs\n2gXHHdfsiqwFNHJk8QOycBi1L/D9Ysoxs6br64MTT4SZM7PXvr5mV2QtoJEji1kRsWP0TUTskPSa\nAmsys2bq6oL+yudnbbpr5MjiWUlvG32T+mp6vriSzMys1TRyZPEx4FuSRvt1OoRXxpwwM7NpIDcs\nImKDpN8G3kzWS+wDEfFi4ZWZmVnLaLSL8mOAuan970oiIr5RWFVmZtZScsNC0mrgCGCQrFM/yJ7g\ndliYmU0TjRxZlIAFkdfjoJmZTVmN3A11L/BbRRdiZmatq5GwOAi4T9JaSf2jP0UXZmZl3LmfNVkj\np6EuKboIM8sx2rlfZ+crnfv5wTmbRI3cOnvbZBRiZnW4cz9rstzTUJJ+X9IGSTsk7ZK0R9LTk1Gc\nmSU9PVmnfnv2ZK89Pc2uyKaZRq5ZXA4sBX5G1ongB9I8M5ss7tzPmqyRsCAihoCOiNgTEVcDJzWy\nnqSFkjZLGpK0osrymZKuS8vXS5pbsbw7HdFc2MjnmU1Zo537Pfxw9trV1eyKbJppJCyek9QJDEr6\nnKSPA/vlrZTGvbgCOB1YACyVtKCiWS/wVEQcCVwGXFqx/DLgXxqo0czMCtRIWLwvtVsOPAscDry3\ngfWOBYYiYksaw3sNsLiizWLgmjR9A3CKJAFIOgPYAmxq4LPMzKxAuWERET8HXiLrG+rbwIp0WirP\nocDWsvfDaV7VNhGxG9gOzJG0H/CXwGfqfYCkZZIGJA2M+L5zM7PCNHI31B8CDwL/m+zC9pCk0xvY\ntqrMq+wypFabzwCXlQ+6VE1ErIqIUkSUunwO18ysMI08lPcF4OTRowlJRwDfJf9awjDZKatRhwGP\n1GgzLGkGMBvYBhwHnCXpc8ABwEuSXogI34VlZtYEjYTFExWnnbYATzSw3gZgvqR5wC+AJcAfVbTp\nB84D7gDOAtalDgtPHG0g6RJgh4PCzKx5aoaFpP+WJjdJuhm4nuwU0dlkQVBXROyWtBxYC3QAV0XE\nJkkrgYGI6Af6gNWShsiOKJbs1d6YmVkhVKvncUlX11kvIuLPiilpfEqlUgwMDDS7DDOztiJpY0SU\n8trVPLKIiPenZyU+EhGXTWh1ZmbWVureDRURe4BFk1SLmZm1qEYucP+bpMuB68geygMgIu4qrCoz\nM2spjYTFf0mvK8vmBfCuiS/HzMxaUSPjWZw8GYWYtaWRkWwgosHBrNvwvj538mdTUiNPcM+W9MXR\nbjUkfUHS7MkozqzljY5gt3PnKyPYmU1BjXQkeBXwDHBO+nkaqHdbrdn04RHsbJpoJCyOiIiLU++x\nWyLiM8Cbii7MrC14BDubJhoJi+clnTD6RtLbgeeLK8msjXgEO5smGrkb6kPANek6hci65Ti/yKLM\n2sboCHZmU1wjd0MNAr8j6bXp/dOFV2VmZi2lkbuhPpqC4hngi5LuknRa8aWZmVmraOSaxZ+lo4nT\ngIOB9wN/W2hVZmbWUhoJi9HR7P4AuDoi7qb6CHdmZjZFNRIWGyV9jyws1kran2xMbjMzmyYauRuq\nF+gBtkTEc5LmkJ2KMjOzaaKRu6FekjQX+BNJAfwoIm4sujAzM2sdjdwN9RXgg8A9wL3ABZKuKLow\nMzNrHY2chnon8JZI469KuoYsOMzMbJpo5AL3ZqC77P3hwE8b2bikhZI2SxqStKLK8pmSrkvL16fT\nXUg6VtJg+rlb0pmNfJ6ZmRWj5pGFpJvIBjmaDdwv6c606BjgjrwNp/G7rwBOBYaBDZL6I+K+sma9\nwFMRcaSkJcClwLlkp7tKEbFb0iHA3ZJuiojdY99FMzPbW/VOQ/1dlXkCTgCWNrDtY4GhiNgCIGkN\nsBgoD4vFwCVp+gbgckmKiOfK2swiCy1rdx4oyKxt1TwNFRG3jf4A24E/BP4BOAW4soFtHwpsLXs/\nnOZVbZOOGrYDcwAkHSdpE9n1kQ9WO6qQtGx0UKaRkZEGSrKmmqyBgkZGYNEi6O7OXv1vw2yv1QwL\nSUdJukjS/cDlZL/UFREnR8SXG9h2tae8K48QaraJiPURcTTZaa9PSZr1aw0jVkVEKSJKXf4LtfVN\n1kBBHr3ObMLVu8D9ANlRxHsi4oQUEHvGsO1hsovhow4DHqnVRtIMsusj28obRMT9wLPAW8bw2daK\nJmugII9eZzbh6oXFe4HHgFskfU3SKYytT6gNwHxJ8yR1AkuAyo7/+4Hz0vRZwLqIiLTODABJbwTe\nDDw0hs+2VjRZAwV59DqzCVfzAnd6SvtGSfsBZwAfB14v6avAjRHxvXobTncyLQfWAh3AVRGxSdJK\nYCAi+oE+YLWkIbIjiiVp9ROAFZJeJOuH6r9HxJN7tafWfJM1UFBf3ysX0o87zqPXmU0ApWftGmss\nHQicDZwbEe8qrKpxKJVKMTAw0OwyzMzaiqSNEVHKa9fIQ3kvi4htEfH3rRYUZmZWrDGFhZmZTU8O\nCzMzy+WwMDOzXA4LMzPL5bAwM7NcDgszM8vlsDAzs1wOCzMzy+WwMDOzXA4LMzPL5bAwM7NcDgsz\nM8vlsDAzs1wOCzMzy+WwMDOzXA4LMzPL5bAwM7NcDgszM8tVaFhIWihps6QhSSuqLJ8p6bq0fL2k\nuWn+qZI2SronvXoYVzOzJiosLCR1AFcApwMLgKWSFlQ06wWeiogjgcuAS9P8J4H3RMR/Bs4DVhdV\np5mZ5SvyyOJYYCgitkTELmANsLiizWLgmjR9A3CKJEXETyLikTR/EzBL0swCazUzszqKDItDga1l\n74fTvKptImI3sB2YU9HmvcBPImJn5QdIWiZpQNLAyMjIhBVuZmavVmRYqMq8GEsbSUeTnZq6oNoH\nRMSqiChFRKmrq2vchZqZWX1FhsUwcHjZ+8OAR2q1kTQDmA1sS+8PA24E/jQiHiywTjMzy1FkWGwA\n5kuaJ6kTWAL0V7TpJ7uADXAWsC4iQtIBwHeBT0XE/yuwRjMza0BhYZGuQSwH1gL3A9dHxCZJKyUt\nSs36gDmShoBPAKO31y4HjgT+WtJg+jm4qFrNzKw+RVReRmhPpVIpBgYGml1G+xkZgd5eGByEnh7o\n6wNf/zGbNiRtjIhSXjs/wT3d9fbC7bfDzp3Za29vsysysxbksJjuBgehsxM6OrLXwcFmV2RmLchh\nMd319MCuXbBnT/ba09PsisysBTkspru+PjjxRJg5M3vt62t2RWbWgmY0uwBrsq4u6K+8o9nM7NV8\nZGFmZrkcFmZmlsthYWZmuRwWZmaWy2FhZma5HBZmZpbLYWFmZrkcFmZmlsthYWZmuRwWZmaWy2Fh\nZma5HBataGQEFi2C7u7sdWSk2RWZ2TTnsGhFHpDIzFqMw6IVeUAiM2sxhYaFpIWSNksakrSiyvKZ\nkq5Ly9dLmpvmz5F0i6Qdki4vssaW5AGJzKzFFBYWkjqAK4DTgQXAUkkLKpr1Ak9FxJHAZcClaf4L\nwF8DFxZVX0vzgERm1mKKHPzoWGAoIrYASFoDLAbuK2uzGLgkTd8AXC5JEfEs8CNJRxZYX+vygERm\n1mKKPA11KLC17P1wmle1TUTsBrYDcxr9AEnLJA1IGhjxHUNmZoUpMixUZV6Mo01NEbEqIkoRUerq\n6hpTcWZm1rgiw2IYOLzs/WHAI7XaSJoBzAa2FViTmZmNQ5FhsQGYL2mepE5gCVB5Ir4fOC9NnwWs\ni4iGjyzMzGxyFHaBOyJ2S1oOrAU6gKsiYpOklcBARPQDfcBqSUNkRxRLRteX9BDwWqBT0hnAaRFx\nX+XnmJlZ8Yq8G4qIuBm4uWLeRWXTLwBn11h3bpG1mZlZ4/wEt5mZ5XJYmJlZLoeFmZnlcliYmVku\nh4WZmeVyWJiZWS6HhZmZ5XJYjIWHOzWzacphMRYe7tTMpimHxVh4uFMzm6YcFmPh4U7NbJpyWIyF\nhzs1s2mq0I4EpxwPd2pm05SPLMzMLJfDwszMcjkszMwsl8PCzMxyTa+w8BPYZmbjMrXCojwM3v1u\nWLjw1cHgJ7DNzMal0LCQtFDSZklDklZUWT5T0nVp+XpJc8uWfSrN3yzp3Q19YHkYrFuX/ZQHg5/A\nNjMbl8LCQlIHcAVwOrAAWCppQUWzXuCpiDgSuAy4NK27AFgCHA0sBL6StldfeRi89BLs3v3qYPAT\n2GZm41LkkcWxwFBEbImIXcAaYHFFm8XANWn6BuAUSUrz10TEzoj4D2Aoba++8jDYZx+YMePVweAn\nsM3MxqXIJ7gPBbaWvR8GjqvVJiJ2S9oOzEnzf1yx7qGVHyBpGbAsvd3ZuXHjA/PgjbPgNTvhBYCZ\nTzwx6wV47j9uuunnLx588O6XV966FQ4+eK92cBIcBDzZ7CIKMBX3y/vUHrxPv+6NjTQqMixUZV40\n2KaRdYmIVcAqAEkDuyJKYy2ylUkaiCm2TzA198v71B68T+NX5GmoYeDwsveHAY/UaiNpBjAb2Nbg\numZmNkmKDIsNwHxJ8yR1kl2wruyFrx84L02fBayLiEjzl6S7peYB84E7C6zVzMzqKOw0VLoGsRxY\nC3QAV0XEJkkrgYGI6Af6gNWShsiOKJakdTdJuh64D9gNfDgi9uR85Kqi9qWJpuI+wdTcL+9Te/A+\njZOyP+TNzMxqm1pPcJuZWSEcFmZmlmtKhEVetyLtSNJDku6RNChpoNn1jIekqyQ9IenesnkHSvpX\nST9Lr69rZo3jUWO/LpH0i/R9DUr6g2bWOBaSDpd0i6T7JW2S9NE0v22/qzr71LbfE4CkWZLulHR3\n2q/PpPnzUpdJP0tdKHVO+Ge3+zWL1A3IvwOnkt1yuwFYGhH3NbWwvSTpIaAUEW37AJGkdwA7gG9E\nxFvSvM8B2yLib1Owvy4i/rKZdY5Vjf26BNgREX/XzNrGQ9IhwCERcZek/YGNwBnA+bTpd1Vnn86h\nTb8ngNTDxX4RsUPSbwA/Aj4KfAL4dkSskXQlcHdEfHUiP3sqHFk00q2INUFE/JDsLrdy5V28XEP2\nP3BbqbFfbSsiHo2Iu9L0M8D9ZD0mtO13VWef2lpkdqS3v5F+AngXWZdJUNB3NRXColq3Im3/j4Ls\nH8D3JG1M3ZpMFa+PiEch+x8aaPk+V8ZguaSfptNUbXPKplzq+fl3gfVMke+qYp+gzb8nSR2SBoEn\ngH8FHgR+FRGj3RkV8jtwKoRFQ12DtKG3R8TbyHrt/XA69WGt66vAEUAP8CjwheaWM3aSfhP4J+Bj\nEfF0s+uZCFX2qe2/p4jYExE9ZD1bHAv8p2rNJvpzp0JYTMmuQSLikfT6BHAjjfS62x4eT+eTR88r\nP9HkeiZERDye/id+CfgabfZ9pfPf/wRcGxHfTrPb+ruqtk/t/j2Vi4hfAbcCvw8ckLpMgoJ+B06F\nsGikW5G2Imm/dFEOSfsBpwH31l+rbZR38XIe8H+bWMuEGf2lmpxJG31f6aJpH3B/RHyxbFHbfle1\n9qmdvycASV2SDkjT+wL/lex6zC1kXSZBQd9V298NBZBuf/sSr3Qr8tkml7RXJL2J7GgCsi5Z/k87\n7pOkbwInkXWh/DhwMfAd4HqgG3gYODsi2upicY39Oons1EYADwEXjJ7vb3WSTgBuB+4BXkqz/4rs\nHH9bfld19mkpbfo9AUh6K9kF7A6yP/avj4iV6XfGGuBA4CfAn0TEzgn97KkQFmZmVqypcBrKzMwK\n5rAwM7NcDgszM8vlsDAzs1wOCzMzy+WwsJYj6bckrZH0oKT7JN0s6agm1/QxSa8Zx3rnS3pD2fuv\nS1owsdWNq6bLc9q8OXU1c7ek49O8GZK+P57/Dtb+HBbWUtLDVDcCt0bEERGxgOz++Nc3tzI+BlT9\nJZl6Pq7lfODlsIiID7RJj8gXACvIHvS6MM37ELA6Ip5rWlXWNA4LazUnAy9GxJWjMyJiMCJuV+bz\nku5VNtbHuQCSTpJ0q6QbJD0g6doUOkg6RtK/pb+Q75S0f+qI7fOSNqQO5S6otx1JHyH7hX+LpFtS\n2x2SVkpaDxwv6aK0vXslrUrrnQWUgGuVjZ2wb9p+KW1jadqPeyVdOrq/adufTTX/WFLdoFQ2jsHR\nZe9vlfR7ysaj+E7axx+nB7oa9SKwL1lAvpieGn4P8I0xbMOmkojwj39a5gf4CHBZjWXvJetls4Ps\nSONh4BCyp6e3k/WJsw9wB3AC0AlsAY5J67+W7In4ZcCn07yZwAAwr9Z2UruHgIPKagngnLL3B5ZN\nrwbek6ZvJRuXhPL3ZOHzMNCValoHnFG27dH1Pzdaa53/Zh8HPpOmDwH+PU1/Gbg4Tb8LGEzT5wOX\n52yzO9V6B/BW4IvAO5v978M/zfvxkYW1kxOAb0bWEdzjwG3AMWnZnRExHFkHcYPAXODNwKMRsQEg\nIp6OrBvn04A/VdbN83pgDjC/znaq2UPWSd2ok9Nf+PeQ/WI+uvpqLzuG7FTbSKrpWmC0Z+FdwD+n\n6Y11ahh1PXB2mj4H+FaaPoEsuIiIdcAcSbNztkVq/3BEnBQRxwPPkYXbA5JWKxuJranXkGzyzchv\nYjapNvFKh2iVqnVHP6q8H5w9ZP+2RfWumgX8RUSsfdVM6aQa26nmhYjYk9abBXyF7Ahiq7JR82bV\nqXW0hlpejIjRuuvVAEBE/ELSL9NppnPJrjfU+ozx9O/zWeDTZEd915IdZV0M/PE4tmVtykcW1mrW\nATMl/fnojHTd4Z3AD4Fz0zWHLrK/xO+ss60HgDdIOiZtZ39l3TivBT6krAtrJB2lrHffep4B9q+x\nbDQYnlQ2fkJ52NVabz3wTkkHpQvkS8mOlGqSdKak/1lj8Rrgk8DsiLgnzfsh6Rd6CsInY4zjVKT/\n7r+IiJ+RXb94iSzAfEfUNOMjC2spERGSzgS+pGzc5xfI/pL9GNkvv+OBu8n+Qv5kRDwm6bdrbGtX\nugj+ZWXdOT9P1qXz18lO7dyVLoSPkD8M5SrgXyQ9GhEnV3zOryR9jayH04fIus0f9Q/AlZKeT7WP\nrvOopE+RdS0t4OaIyOtW+gig1i/7G4D/BfxN2bxLgKsl/ZTsVNJ5lStJWkR2RHRRlWUiO6I4J81a\nRXZkMYPsziibRtzrrFmbkPSPwMcjYqTZtdj047AwM7NcvmZhZma5HBZmZpbLYWFmZrkcFmZmlsth\nYWZmuRwWZmaW6/8DociZ5aU06BcAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1b5c5efb358>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "dir_path = 'Test_data/'\n",
     "alcohols = ['NB4']\n",
-    "concentrations = [i for i in range(8)]\n",
+    "concentrations = ['0025', '0050', '0100', '0250', '0500', '0750', \n",
+    "                  '1000', '1250', '1500', '1750', '2000', '2500', \n",
+    "                  '3000']\n",
     "df2 = ff.procesing_biodiesel_FTIR(alcohols, concentrations, dir_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Alcohol</th>\n",
+       "      <th>Concentrations</th>\n",
+       "      <th>Wave number</th>\n",
+       "      <th>Absorption 1</th>\n",
+       "      <th>Absorption 2</th>\n",
+       "      <th>Absorption 3</th>\n",
+       "      <th>Absorption average</th>\n",
+       "      <th>Standard deviation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NB4</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>1702.000000</td>\n",
+       "      <td>0.000516</td>\n",
+       "      <td>0.000644</td>\n",
+       "      <td>0.000658</td>\n",
+       "      <td>0.000606</td>\n",
+       "      <td>0.000064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NB4</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>1702.000000</td>\n",
+       "      <td>0.000527</td>\n",
+       "      <td>0.000619</td>\n",
+       "      <td>0.000605</td>\n",
+       "      <td>0.000584</td>\n",
+       "      <td>0.000040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NB4</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1743.000000</td>\n",
+       "      <td>0.001248</td>\n",
+       "      <td>0.001184</td>\n",
+       "      <td>0.001115</td>\n",
+       "      <td>0.001183</td>\n",
+       "      <td>0.000054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NB4</td>\n",
+       "      <td>2.50</td>\n",
+       "      <td>1742.333333</td>\n",
+       "      <td>0.004649</td>\n",
+       "      <td>0.004671</td>\n",
+       "      <td>0.004421</td>\n",
+       "      <td>0.004580</td>\n",
+       "      <td>0.000113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NB4</td>\n",
+       "      <td>5.00</td>\n",
+       "      <td>1742.000000</td>\n",
+       "      <td>0.011327</td>\n",
+       "      <td>0.011935</td>\n",
+       "      <td>0.011437</td>\n",
+       "      <td>0.011566</td>\n",
+       "      <td>0.000264</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Alcohol  Concentrations  Wave number  Absorption 1  Absorption 2  \\\n",
+       "0     NB4            0.25  1702.000000      0.000516      0.000644   \n",
+       "1     NB4            0.50  1702.000000      0.000527      0.000619   \n",
+       "2     NB4            1.00  1743.000000      0.001248      0.001184   \n",
+       "3     NB4            2.50  1742.333333      0.004649      0.004671   \n",
+       "4     NB4            5.00  1742.000000      0.011327      0.011935   \n",
+       "\n",
+       "   Absorption 3  Absorption average  Standard deviation  \n",
+       "0      0.000658            0.000606            0.000064  \n",
+       "1      0.000605            0.000584            0.000040  \n",
+       "2      0.001115            0.001183            0.000054  \n",
+       "3      0.004421            0.004580            0.000113  \n",
+       "4      0.011437            0.011566            0.000264  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.head()"
    ]
   },
   {
